2003-10-02  David Ayers  <d.ayers@inode.at>

	* Source/NSBrowser.m (-[NSBrowser setDelegate]):
	Set _passiveDelegate to YES for 'nil' delegate.  
	Use GSObjCRuntime functions to get selector names.
	Update documentation.

2003-10-02  Andrew Ruder  <aereder@ksu.edu>

	* Source/NSBrowser.m (-[NSBrowser setDelegate]):  Check for
	nil object to allow unsetting the delegate.

2003-09-29  Adam Fedor  <fedor@gnu.org>

	* Version 0.9.0

2003-09-29  Fred Kiefer <FredKiefer@gmx.de>

	* Headers/Additions/GNUstepGUI/GSLayoutManager.h
	* Source/GSLayoutManager.m
	Added missing method [isValidGlyphIndex:].
	
2003-09-29  Fred Kiefer <FredKiefer@gmx.de>

	* Source/NSBrowser.m
	Patch by Christopher Culver:
	Define empty [sizeToFit] method to override NSControl implementation.
	
2003-09-27 19:29 Gregory John Casamento <greg_casamento@yahoo.com>

	* Source/GSNibContainer.m: [GSNibContainer awakeWithContext:]
	Added code to set the services and windows menus as designated in
	Gorm.  Addresses Report #5205
	
2003-09-27  David Ayers  <d.ayers@inode.at>

	* Source/NSCell.m (-compare:):  Compare the stringValue of
	NSCell's rather than their contents directly.

2003-09-23 19:14  Alexander Malmberg <alexander@malmberg.org>

	* Source/NSWindow.m (-orderWindow:relativeTo:): Only force a display
	of the content view if we're being ordered _to_ the screen.

2003-09-23 19:11  Alexander Malmberg <alexander@malmberg.org>

	* Source/NSTextContainer.m (-dealloc): Set the text container of
	our text view, if any, to nil.

2003-09-22  Adam Fedor  <fedor@gnu.org>

	* Source/NSWindowController.m (-setWindow:):  Set window's
	releaseWhenClosed when document is not nil. Add documentation.

2003-09-21  Fred Kiefer <FredKiefer@gmx.de>

	* Source/NSPopUpButtonCell.m
	Undid the tracking of changes for the menu item. Changed [dealloc]
	to not call clean up methods as these caused segmentation faults
	in GNUMail.
	
2003-09-21 15:15  Alexander Malmberg <alexander@malmberg.org>
